--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Run PM2 Restart
         uses: garygrossgarten/github-action-ssh@release
         with:
-          command: sudo pm2 restart play2win
+          command: sudo pm2 restart 0
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
